@@ -3,14 +3,17 @@ beancount: TODO
 * Ingest (LedgerHub)
 ** Merging into Beancount
 
+  - Refactor the insides of file() to test them better.
+  - Write 3x unit tests for exceptions being raised from file_*()
+
+
+
   - Complete unit tests on beancount.ingest.compat.
 
   - Create a good, working example file.
     * The old file is available under examples/ingest
     * Complete import example file.
     * Add tests for import.
-
-  - Add exception handlers for ALL importer callbacks.
 
   - Make sure that when an exptest fails it includes the filename of the test
     somewhere in there; it's annoying when it's not present there.
